// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Unsubscribe Rate Page bar chart props renders tooltip content 1`] = `
<Fragment>
  <TooltipMetric
    color="#88E2E7"
    description="Never engaged, first email in last 7 days"
    key="c_new"
    label="New"
    value="0.5%"
  />
  <TooltipMetric
    color="#1A838B"
    description="0-14 days since last engagement"
    key="c_14d"
    label="Recently Engaged"
    value="0.4%"
  />
  <TooltipMetric
    color="#219EA8"
    description="14-90 days since last engagement"
    key="c_90d"
    label="Semi Recently Engaged"
    value="0.3%"
  />
  <TooltipMetric
    color="#29B9C7"
    description="90-365 days since last engagement"
    key="c_365d"
    label="Not Recently Engaged"
    value="0.2%"
  />
  <TooltipMetric
    color="#50CFDA"
    description="365+ days since last engagement"
    key="c_uneng"
    label="Never Engaged"
    value="0.1%"
  />
</Fragment>
`;

exports[`Signals Unsubscribe Rate Page renders correctly 1`] = `
<SignalsPage
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Back to Overview",
      "to": "/signals",
    }
  }
  dimensionPrefix="Unsubscribe Rate by Cohort for"
  facet="sending-domain"
  facetId="test.com"
  primaryArea={<Connect(DateFilter) />}
>
  <Grid>
    <Grid.Column
      md={7}
      sm={12}
    >
      <withRouter(Tabs)
        facet="sending-domain"
        facetId="test.com"
      />
      <Panel
        sectioned={true}
      >
        <div
          className="LiftTooltip"
        >
          <LineChart
            height={300}
            lineType="natural"
            lines={
              Array [
                Object {
                  "c_total": 1,
                  "date": "2017-01-01",
                },
                Object {
                  "c_total": 10,
                  "date": "2017-01-02",
                },
              ]
            }
            margin={
              Object {
                "bottom": 5,
                "left": 18,
                "right": 0,
                "top": 12,
              }
            }
            onClick={[MockFunction]}
            selected="2017-01-02"
            stroke="#000"
            tooltipContent={[Function]}
            tooltipWidth="250px"
            width="99%"
            xAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [
                  1,
                  2,
                ],
              }
            }
            xKey="date"
            yAxisProps={
              Object {
                "tickFormatter": [Function],
              }
            }
            yKey="value"
            yKeys={
              Array [
                Object {
                  "description": "0-14 days since last engagement",
                  "fill": "#1A838B",
                  "key": "c_14d",
                  "label": "Recently Engaged",
                  "stroke": "#1A838B",
                },
                Object {
                  "description": "14-90 days since last engagement",
                  "fill": "#219EA8",
                  "key": "c_90d",
                  "label": "Semi Recently Engaged",
                  "stroke": "#219EA8",
                },
                Object {
                  "description": "90-365 days since last engagement",
                  "fill": "#29B9C7",
                  "key": "c_365d",
                  "label": "Not Recently Engaged",
                  "stroke": "#29B9C7",
                },
                Object {
                  "description": "365+ days since last engagement",
                  "fill": "#50CFDA",
                  "key": "c_uneng",
                  "label": "Never Engaged",
                  "stroke": "#50CFDA",
                },
                Object {
                  "description": "Never engaged, first email in last 7 days",
                  "fill": "#88E2E7",
                  "key": "c_new",
                  "label": "New",
                  "stroke": "#88E2E7",
                },
              ]
            }
            yRange={
              Array [
                "auto",
                "auto",
              ]
            }
          />
          <Legend
            items={
              Array [
                Object {
                  "description": "Never engaged, first email in last 7 days",
                  "fill": "#88E2E7",
                  "label": "New",
                  "stroke": "#88E2E7",
                },
                Object {
                  "description": "365+ days since last engagement",
                  "fill": "#50CFDA",
                  "label": "Never Engaged",
                  "stroke": "#50CFDA",
                },
                Object {
                  "description": "90-365 days since last engagement",
                  "fill": "#29B9C7",
                  "label": "Not Recently Engaged",
                  "stroke": "#29B9C7",
                },
                Object {
                  "description": "14-90 days since last engagement",
                  "fill": "#219EA8",
                  "label": "Semi Recently Engaged",
                  "stroke": "#219EA8",
                },
                Object {
                  "description": "0-14 days since last engagement",
                  "fill": "#1A838B",
                  "label": "Recently Engaged",
                  "stroke": "#1A838B",
                },
              ]
            }
            tooltipContent={[Function]}
          />
        </div>
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      mdOffset={0}
      sm={12}
    >
      <div
        className="OffsetCol"
      >
        <EngagementRecencyActions
          cohorts={
            Object {
              "c_total": 10,
              "date": "2017-01-02",
            }
          }
          date="2017-01-02"
        />
      </div>
    </Grid.Column>
  </Grid>
  <OtherChartsHeader
    facet="sending-domain"
    facetId="test.com"
  />
  <Grid>
    <Grid.Column
      sm={6}
      xs={12}
    >
      <withRouter(Connect(WithSpamTrapDetails(SpamTrapsPreview))) />
    </Grid.Column>
    <Grid.Column
      sm={6}
      xs={12}
    >
      <withRouter(Connect(WithHealthScoreDetails(HealthScorePreview))) />
    </Grid.Column>
  </Grid>
</SignalsPage>
`;

exports[`Signals Unsubscribe Rate Page renders empty correctly 1`] = `
<Panel
  sectioned={true}
>
  <Callout
    title="No Data Available"
  >
    Insufficient data to populate this chart
  </Callout>
</Panel>
`;

exports[`Signals Unsubscribe Rate Page renders error correctly 1`] = `
<SignalsPage
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Back to Overview",
      "to": "/signals",
    }
  }
  dimensionPrefix="Unsubscribe Rate by Cohort for"
  facet="sending-domain"
  facetId="test.com"
  primaryArea={<Connect(DateFilter) />}
>
  <Grid>
    <Grid.Column
      md={7}
      sm={12}
    >
      <withRouter(Tabs)
        facet="sending-domain"
        facetId="test.com"
      />
      <Panel
        sectioned={true}
      >
        <Callout
          title="Unable to Load Data"
        >
          error message
        </Callout>
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      mdOffset={0}
      sm={12}
    >
      <div
        className="OffsetCol"
      />
    </Grid.Column>
  </Grid>
  <OtherChartsHeader
    facet="sending-domain"
    facetId="test.com"
  />
  <Grid>
    <Grid.Column
      sm={6}
      xs={12}
    >
      <withRouter(Connect(WithSpamTrapDetails(SpamTrapsPreview))) />
    </Grid.Column>
    <Grid.Column
      sm={6}
      xs={12}
    >
      <withRouter(Connect(WithHealthScoreDetails(HealthScorePreview))) />
    </Grid.Column>
  </Grid>
</SignalsPage>
`;

exports[`Signals Unsubscribe Rate Page renders loading correctly 1`] = `
<Panel
  sectioned={true}
>
  <div
    style={
      Object {
        "height": "220px",
        "position": "relative",
      }
    }
  >
    <Loading />
  </div>
</Panel>
`;
